01/11/2023 Ajouts divers éléments

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div class="main-container">
         <header>
+            <!-- Menu -->
             <nav>
                 <div>
                     <img src="images/logo/Booki.png" alt="logo de Booki" class="logo-booki">
@@ -32,6 +33,8 @@
                     <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
                     <p>En plein centre ville ou en pleine nature</p>
                 </div>
+
+                <!-- Formulaire recherche de villes -->
                 <form action="search" method="get">
                     <div class="form-container">
                         <i class="fa-solid fa-location-dot fa-lg"></i>
@@ -42,6 +45,8 @@
                         </button>
                     </div>
                 </form>
+
+                <!-- Filtres logements -->
                 <div class="filtres">
                     <h3>Filtres</h3>
                     <button class="btn"><i class="fa-solid fa-money-bill-wave"></i> Économique</button>
@@ -49,12 +54,15 @@
                     <button class="btn"><i class="fa-solid fa-heart"></i> Romantique</button>
                     <button class="btn"><i class="fa-solid fa-fire"></i> Nos pépites</button>
                 </div>
+
                 <div class="infos">
                     <i class="fa-solid fa-info fa-sm"></i>
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
+
             <div class="hebergements-and-populaires">
+                <!-- Hébergements proposés à Marseille -->
                 <section id="hebergements-marseille" class="hebergements">
                     <h2 class="section-title">Hébergements à Marseille</h2>
                     <div class="hebergements-cards">
@@ -175,6 +183,8 @@
                     </div>
                     <a href="#"><h3>Afficher plus</h3></a>
                 </section>
+
+                <!-- Hébergements populaires à Marseille -->
                 <section class="populaires">
                     <div class="populaires-title">
                         <h2 class="section-title">Les plus populaires</h2>
@@ -205,7 +215,7 @@
                                 <img src="images/hebergements/aw-creative.jpeg" alt="Image d'une chambre de la Chambres d’hôtes Au cœur de l’eau">
                                 <div class="card-content">
                                     <div class="card-txt">
-                                        <h3 class="card-title">Chambres d’hôtes Au cœur de l’eau</h3>
+                                        <h3 class="card-title">Chambres d'hôtes Au cœur de l’eau</h3>
                                         <p class="card-subtitle">Nuit à partir de 71<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
@@ -241,6 +251,8 @@
                     </div>
                 </section>
             </div>
+
+            <!-- Activités proposées à Marseille -->
             <section id="actives-marseille" class="activites">
                 <h2>Activités à Marseille</h2>
                 <div class="activites-cards">
